--- a/template.html
+++ b/template.html
@@ -41,9 +41,8 @@
         <!-- Custom content here -->
     </div>
     <footer>
-        <a class="button" href="https://github.com/j-eo/cursory">Source Code</a>
-        <a class="button">About</a>
-        <p><b>Text and images from Wikipedia.</b> Build time: 2023-09-19 20:39:57.206730 UTC.</p>
+        <a class="button" href="https://github.com/jake-anto/cursory">Source Code</a>
+        <a class="button" href="/about">About</a>
         <p>Made with &#10084; by <a href="https://itsjake.me/">Jake Anto</a>.</p>
     </footer>
 </body>
