Remove Cloudflare injection

--- a/template.html
+++ b/template.html
@@ -16,8 +16,7 @@
     <header>
         <h1>Cursory</h1>
         <p>A cursory glance at current events.</p>
-        <select onchange="if (!window.__cfRLUnblockHandlers) return false; location = this.value;"
-            data-cf-modified-6644ab50109eaa7f9c865fa1->
+        <select onchange="location = this.value;">
             <option value="/">🇺🇸 English</option>
             <option value="/bs">🇧🇦 Bosanski</option>
             <option value="/da">🇩🇰 Dansk</option>
