Fix accessibility issues

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Cursory</h1>
         <p>A cursory glance at current events.</p>
-        <select onchange="location = this.value;">
+        <select onchange="location = this.value;" aria-label="Language">
             <option value="/">🇺🇸 English</option>
             <option value="/bs">🇧🇦 Bosanski</option>
             <option value="/da">🇩🇰 Dansk</option>
